--- a/c++/STL/小知识.md
+++ b/c++/STL/小知识.md
@@ -54,7 +54,7 @@ p>=p1              p的位置在p1的后面或同一位置时返回true，否则
 
 总结：
 
-**Input Iterator**：只能单步向前迭代元素，不允许修改由该类迭代器引用的元素，不支持赋值操作，可判断迭代器是否相等。(只读迭代器)
+**Input Iterator**：只能单步向前迭代元素，不允许写，不支持赋值操作，不支持多部前进(可用advance实现)，可判断迭代器是否相等。(只读迭代器)
 
 **Output Iterator**：只能单步向前迭代元素，对元素只有写的权力，不可判断迭代器是否相等。
 
@@ -165,3 +165,9 @@ Uinitialized_move -> construct(T*, value&&) -> T(T&&) (调用移动构造函数)
 Uninitialized_fill -> construct(T*, const value& ) -> T(const value& )(调用拷贝构造函数)
 
 另行申请空间，拷贝原对象，不操作原对象
+
+---
+
+### 异常
+
+如果一个函数在执行过程中拋出的异常在本函数内就被 catch 块捕获并处理，那么该异常就不会拋给这个函数的调用者（也称为“上一层的函数”）；如果异常在本函数中没有被处理，则它就会被拋给上一层的函数
