--- a/c++/STL/小知识.md
+++ b/c++/STL/小知识.md
@@ -171,3 +171,53 @@ Uninitialized_fill -> construct(T*, const value& ) -> T(const value& )(调用拷
 ### 异常
 
 如果一个函数在执行过程中拋出的异常在本函数内就被 catch 块捕获并处理，那么该异常就不会拋给这个函数的调用者（也称为“上一层的函数”）；如果异常在本函数中没有被处理，则它就会被拋给上一层的函数
+
+---
+
+### 继承
+
+基类和派生类指针互相转化
+
+```c++
+struct Base
+{
+    int base_value = 100;
+};
+struct Child : public Base
+{
+    int child_value = 200;
+};
+
+int main()
+{
+    Child a{};
+    Base*  bp = &a;
+    cout << bp->base_value << endl; // cout: 100
+    
+    Base  b{};
+    Child* cp = reinterpret_cast<Child*>(&b);
+    cout << cp->base_value << endl;// cout: 100
+    return 0;
+}
+```
+
+派生类可自动转换为基类
+
+基类指针可以通过`reinterpret_cast`转换为派生类，转换后的指针不可以访问派生类空间的元素（不存在）
+
+如果这个基类对象本是在某处由派生类转换而来（赋值，传参，显示转换等），可以对其安全的调用`reinterpret_cast`转换为派生类
+
+
+
+### 值初始化与默认初始化
+
+> 内值类型
+
+#### 值初始化
+
+- 全局变量（包括全局类对象中的内值类型执行合成的构造函数）
+
+#### 默认初始化
+
+- 函数内部变量（包括类对象中的内置类型）
+- 类成员函数（无论类对象为全局还是局部变量）
