--- a/c++/STL/小知识.md
+++ b/c++/STL/小知识.md
@@ -26,6 +26,15 @@ cout << std::is_trivially_destructible<std::string>{}
 
 迭代器操作           说明
 (1)所有迭代器
+
+类型 `It` 满足[*可复制构造* *(CopyConstructible)* ](https://zh.cppreference.com/w/cpp/named_req/CopyConstructible) 
+
+类型 `It` 满足[*可复制赋值* *(CopyAssignable)* ](https://zh.cppreference.com/w/cpp/named_req/CopyAssignable) 
+
+类型 `It` 满足[*可析构* *(Destructible)*](https://zh.cppreference.com/w/cpp/named_req/Destructible) 
+
+类型 `It` 的[左值](https://zh.cppreference.com/w/cpp/language/value_category)满足[*可交换* *(Swappable)* ](https://zh.cppreference.com/w/cpp/named_req/Swappable) 
+
 p++               后置自增迭代器
 ++p               前置自增迭代器
 (2)输入迭代器
@@ -207,7 +216,7 @@ int main()
 
 如果这个基类对象本是在某处由派生类转换而来（赋值，传参，显示转换等），可以对其安全的调用`reinterpret_cast`转换为派生类
 
-
+---
 
 ### 值初始化与默认初始化
 
@@ -221,3 +230,69 @@ int main()
 
 - 函数内部变量（包括类对象中的内置类型）
 - 类成员函数（无论类对象为全局还是局部变量）
+
+---
+
+### STL对越界异常的规定
+
+> 好像不管...
+
+测试：
+
+- 在vector的越界输出乱码
+- 在set的越界程序出现bug
+- 在deque的越界出现bug
+
+---
+
+### 模板实参推导
+
+#### 函数模板
+
+> T永远是纯类型或指针，不会是引用或const
+
+```c++
+template <class T>
+void f(T x);
+template <class T>
+void cf(const T x);
+template <class T>
+void rf(T& x);
+
+int n;
+const int cn = 10;
+int &r = n;
+
+// 顶层const在实参推导时被忽略（T不会被推导为const）
+f(cn); // 调用 f(int)，T 被推导为int
+cf(n); // 调用 cf(const int)，T被推导为int
+f(r);  // 调用 f(int)，T被推导为int
+
+rf(...)// 只支持精确匹配，T被推导为纯类型（非const或引用）
+```
+
+#### 类模板
+
+> 给什么是什么
+
+```c++
+const:
+vector<const int> vec(1,10);
+vec[0] = 100; // error!
+=========================
+reference:
+template <class T>
+class Foo
+{
+public:
+  // Constructor for 'Foo<int &>' must explicitly initialize the reference member 'n'
+    Foo(){} 
+    T n;
+    void f(){ n += 10; }
+};
+    Foo<int&> foo;
+
+```
+
+不会声明`template <class const T>`之类的
+
