--- a/c++/STL/小知识.md
+++ b/c++/STL/小知识.md
@@ -138,9 +138,7 @@ vector vec(10);		//正确
 
 ### is_trivially_copy_assignable
 
-operator bool 返回 std::true_type(false_type)，std::true_type 提供向bool的转型
-
-普通的bool无法被转换
+相似的 `type_traits` 提供向 `std::true/false_type` 的隐式类型转换，bool则不可以转换为`std::true/false_type`
 
 ```c++
 void __uinitialized_fill_n( ForwardIt first, Size n, const T& value,
@@ -296,3 +294,42 @@ public:
 
 不会声明`template <class const T>`之类的
 
+---
+
+
+
+### bug记录
+
+忘记this是指针
+
+ ```c++
+bool operator!=(const ... rhs){ return !(this == rhs); }  // wrong
+bool operator!=(const ... rhs){ return !(*this == rhs); }	// correct
+ ```
+
+rb_tree_erase节点替换时不可以简单的swap，会引起destroy错误 ( 慎用swap⚠️ )
+
+```c++
+// 错误
+if(y != z)
+{
+  std::swap(y->value, z->value);
+  rb_tree-transplant(y, x, root, lmost, rmost);
+}
+// 正确
+if(y != z)
+    {// y 指向z的后继，x指向y的右节点（可能为空）
+        if(y->parent != z){
+            rb_tree_transplant(y, x, root, lmost, rmost);
+            y->right = z->right;
+            y->right->parent = y;
+        }
+        rb_tree_transplant(z, y, root, lmost, rmost);
+        y->left = z->left;
+        y->left->parent = y;
+        y->color = z->color;
+        z = y;  // 由上层控制释放z的空间
+    }
+```
+
+initializer_list ❓
