--- a/c++/STL/小知识.md
+++ b/c++/STL/小知识.md
@@ -63,7 +63,9 @@ p>=p1              p的位置在p1的后面或同一位置时返回true，否则
 
 总结：
 
-**Input Iterator**：只能单步向前迭代元素，不允许写，不支持赋值操作，不支持多部前进(可用advance实现)，可判断迭代器是否相等。(只读迭代器)
+**Input Iterator**：只能单步向前迭代元素，不允许写，可判断迭代器是否相等。(只读迭代器)
+
+> 特别的，输入迭代器只支持一次读，即不允许把当前位置迭代器记存一个副本，等以后再使用（例 istream_iterator 中从一个输入流istream中读取，传递值以后不保证这个值还存在），若想记录位置需要用 Forward Iterator
 
 **Output Iterator**：只能单步向前迭代元素，对元素只有写的权力，不可判断迭代器是否相等。
 
@@ -72,6 +74,8 @@ p>=p1              p的位置在p1的后面或同一位置时返回true，否则
 **Bidirectional Iterator**：该类迭代器是在Forward Iterator的基础上提供了单步向后迭代元素的能力。（双向读写迭代器）
 
 **Random Access Iterator**：该类迭代器能完成上面所有迭代器的工作，它自己独有的特性就是可以像指针那样进行算术计算，而不是仅仅只有单步向前或向后迭代。（随机读写迭代器）
+
+
 
 ### const iterator 与 const_iterator
 
@@ -86,6 +90,14 @@ vector<int>:: const_iterator iter = vec.begin();
 ```
 
 这是底层const，迭代器允许++但不允许改变迭代器所指之物
+
+
+
+### iterator_base
+
+STL在实现`iterator`时把数据放在`iterator_base`类中以实现const和非const迭代器拥有相同的指针，且可相互转化类型 ( 用reinterpre_cast )
+
+
 
 ---
 
@@ -229,6 +241,8 @@ int main()
 - 函数内部变量（包括类对象中的内置类型）
 - 类成员函数（无论类对象为全局还是局部变量）
 
+> `{}列表初始化`可避免默认初始化
+
 ---
 
 ### STL对越界异常的规定
@@ -293,6 +307,50 @@ public:
 ```
 
 不会声明`template <class const T>`之类的
+
+
+
+---
+
+#### constexpr 函数
+
+优点：
+
+- 编译时直接求值，加快运行速度
+- 允许函数被应用在以前调用宏的所有场合，如数组大小处
+
+要求：
+
+- 参数为常量
+- 函数中只能有一个return语句（有极少特例）
+- 只能调用其它constexpr函数
+- 只能使用全局constexpr变量
+
+> 一个声明为constexpr的函数同样可以在运行时被调用，当这个函数的参数是非常量的
+
+#### 聚合类
+
+若聚合类数据成员全部为字面值，聚合类构造函数声明为constexpr，聚合类可当作常量表达式使用
+
+
+
+### 不同机器上类型长度
+
+char，short，float，double，longlong等在32位和64位机均相同
+
+int：		 均为 4B ( 32位 )
+
+long：	  4B ( 32位机 ) 或 8B（64位机）
+
+pointer： 4B（32位机）或 8B（64位机）
+
+size_t：	4B（32位机）或 8B（64位机）
+
+
+
+### 可以根据返回类型重载函数
+
+
 
 ---
 
