--- a/算法/图论算法.md
+++ b/算法/图论算法.md
@@ -1,45 +1,103 @@
 # 图论算法
 
-### Dijkstra+堆优化
+### 数据结构
 
 ```c++
-struct HeapNode{
+vector<vector<int> > G;								// 邻接矩阵
+vector<unordered_set<int> > adj;  		// 不带权临接表 i->(v)
+vector<unordered_map<int, int> > adj; // 带权临接表  i->(v, w)
+```
+
+### DFS
+
+```c++
+dfs(u){
+	vis[u] = true;
+	for(each u->v){
+		if(!vis[v]) dfs(v)
+	}
+}
+```
+
+### BFS
+
+```c++
+vector<bool> inq(n, 0);
+void bfs(u){
+  queue q;
+  q.push(u); inq[u] = true;
+  int cnt = 1, depth = 0;
+  while(!q.empty()){
+    int f = q.front(); q.pop();
+    cnt--;
+    for(each f->v){
+      if(!inq[v]){ q.push(v); inq[v] = true; }
+    }
+    if(cnt == 0){ // 一层访问完毕
+      cnt = q.size();
+      depth++;
+    }
+  }
+}
+```
+
+
+
+## 最小生成树
+
+>  权值最小的生成树
+
+切分定理：给定任意切分，边权最小者必然属于最小生成树
+
+> 证明：假设e为给定切分权重最小边，T为最小生成树，假设e不在T中，必有一切分中的、比e大的边f在T中（若不存在则有两个连通分量），把f删掉e加入就得到一个更小的生成树 T' ，矛盾
+
+### Prim
+
+原理：根据切分定理，每次找到的最小边一定是最小生成树中的边
+
+维护一个已经找到的部分最小生成树中的节点集合S，每次找S到补集的边中权重最小边e，加入最小生成树，以该点e.to为中间节点，更新新S到剩余补集的距离
+
+时间复杂度：`elogv`
+
+```c++
+struct HeapNode{// (id, d)
     HeapNode(int _u, int _d) : u(_u), d(_d){ }
     int u, d;
     bool operator < (const HeapNode &v) const { return d > v.d; }
 }
-struct Edge{
-    int to, len;
-}
+vector<int> d;
+vector<bool> vis;
+vector<unordered_map<int, int>> adj;
 
-vector<Edge> adj[maxn];
-int d[maxn];
-bool vis[maxn];
-priority_queue<HeapNode> q; // 优先队列对已开放顶点（已优化）进行排序，每次队首一定是最优解
-
-void dijkstra(int s){
-    fill(d, d+maxn, 1e9);
-    d[s] = 0;
-    q.push(HeapNode(s, 0));
-    while(!q.empty()){
-        HeapNode f = q.top(); q.pop();
-        int u = f.u;
-        if(vis[u]) continue; // 可重复入队，最优解已经被记录
-        vis[u] = true;
-        for(itn i = 0; i < adj[u].size(); i++){
-            Edge e = adj[u][i];
-            if(d[e.to] > d[u] + e.len){
-                d[e.to] = d[u] + e.len;
-                q.push(HeapNode(e.to, d[e.to]));
-            }
-        }
+void Prim()
+{
+  d[0] = 0;
+  int w = 0; // 权值之和
+  priority_queue<HeapNode> q;
+  q.push(HeapNode(0, 0));
+  while(!q.empty()){
+    HeapNode f = q.front(); q.pop();
+    int u = f.u;
+    vis[u] = true;
+    w += d[u];
+    for(auto p : adh[u]){
+      int v = p.first; int u2v = p.second;
+      if(!vis[v] && u2v < d[v])
+        d[v] = dist;
     }
+  }
 }
 ```
 
 
 
 ### Kruskal
+
+原理：根据切分定理，每次找到的边必然在最小生成树中
+
+排序所有顶点，维护一个已经找到的部分最小生成树顶点集合S，每次找不在S中的最小边e，加入最小生成树
+
+时间复杂度：`elogv`
 
 伪代码
 
@@ -85,29 +143,99 @@ void kruskal(){
 }
 ```
 
+
+
+## 最短路
+
+最短路收敛性质：若u-->v 在最短路中并且d[u]已经填完毕，则对(u,v)松弛以后d[v]填完毕
+
+> 单源最短路算法会生成一个最短路树
+
+### Dijkstra
+
+> 适用于非负权图
+
+原理：
+
+算法维持一个集合S，其中元素均找到最短路，每次在V-S中找到集合S路径最短点u，<u>此u一定为最短路节点</u>，加入S，对所有u出发边松弛以维持S的最短性
+
+u之所以一定为最短路节点：
+
+假设u不是，则有S -> y -> u为最短路，则d[y] > d[u]，矛盾
+
+复杂度：`elogv`（普通`v2`）
+
+```c++
+struct HeapNode{
+    HeapNode(int _u, int _d) : u(_u), d(_d){ }
+    int u, d;
+    bool operator < (const HeapNode &v) const { return d > v.d; }
+}
+struct Edge{
+    int to, len;
+}
+
+vector<Edge> adj[maxn];
+int d[maxn];
+bool vis[maxn];
+priority_queue<HeapNode> q; // 优先队列对已开放顶点（已优化）进行排序，每次队首一定是最优解
+
+void dijkstra(int s){
+    fill(d, d+maxn, 1e9);
+    d[s] = 0;
+    q.push(HeapNode(s, 0));
+    while(!q.empty()){
+        HeapNode f = q.top(); q.pop();
+        int u = f.u;
+        vis[u] = true;
+        for(itn i = 0; i < adj[u].size(); i++){
+            Edge e = adj[u][i];
+            if(!vis[e.to] && d[e.to] > d[u] + e.len){
+                d[e.to] = d[u] + e.len;
+                q.push(HeapNode(e.to, d[e.to]));
+            }
+        }
+    }
+}
+```
+
+
+
 ### Bellman_Ford
+
+> 负权图适用
+
+最短路收敛性质：若u-->v 在最短路中并且d[u]已经填完毕，则对(u,v)松弛以后d[v]填完毕
+
+原理：根据收敛性质，因为d[s]已经确定，v-1次遍历中每次至少有一个最短路路径被加入，v-1次以后一定全部被加入
+
+复杂度：`ve`
 
 伪代码
 
 ```c++
-bool BellmanFord(int s){
+bool BellmanFord(int s){// 返回是否存在负环
 	d[s] = 0;
-    for(v-1){//进行v-1次遍历
-        for(each edge u -> v) //遍历每条边
-            if(d[u] + length[u->v] < d[v]) //可以以u节点优化
-                d[v] = d[u] + length[u-v]; //优化
+    for(v-1){// 进行v-1次遍历
+        for(each edge u -> v) // 遍历所有边
+            if(d[u] + length[u->v] < d[v]) // 可以以u节点优化
+                d[v] = d[u] + length[u-v]; // 优化
     }
     for(each u->v)
-        if(d[u] + length[u-v] < d[v]) //如果仍存在可优化边
-            return false; //图中有负环
+        if(d[u] + length[u-v] < d[v]) // 如果仍存在可优化边
+            return false; // 图中有负环
 }
 ```
 
+
+
 ### SPFA
 
-> shortest-path-faster-algorithm
+> shortest-path-faster-algorithm，由bellman-ford优化而来
 
 *只有某个顶点`u`的`d[u]`被改变时，他的相邻点`v`的`d[v]`才有可能改变*
+
+复杂度：`ke`，很多情况下k不超过2
 
 伪代码
 
@@ -157,6 +285,8 @@ void SPFA(int s){
 }
 ```
 
+
+
 ### Floyd
 
 伪代码
@@ -169,7 +299,7 @@ for(顶点k)
             dist[i][j] = dist[i][k] + dist[k][j];
 ```
 
-c++
+实现
 
 ```c++
 void floyd(){
@@ -180,14 +310,109 @@ void floyd(){
                 	dist[i][j] = dist[i][k] + dist[k][j];
 ```
 
+
+
+## 其他
+
+### Toplogical
+
+> 返回是否是有向无环图
+
+```c++
+vector<int> indegree;
+bool toplogical()
+{
+  int num = 0;  // 逐次拆得的入度为0节点总数
+  queue<int> q; // 入度为0的顶点队列
+  for(int i = 0; i < n; i++) if(indegree[i] == 0) q.push(i);
+  while(!q.empty()){
+    num++;
+    int u = q.front(); q.pop();
+    for(each u->v){
+      indegree[v]--;
+      if(indegree[v] == 0) q.push(v);
+    }
+  }
+  return num == n;
+}
+```
+
+
+
+### DAG上求最长路
+
+拓扑排序+动态规划
+
+`d[v] = max{d[ui] + w(ui,v) | ui 为 v 所有前驱节点}`
+
+```c++
+vector<int> indegree;
+vector<int> d;
+bool findMax()
+{
+  int num = 0;  // 逐次拆得的入度为0节点总数
+  queue<int> q; // 入度为0的顶点队列
+  for(int i = 0; i < n; i++) 
+    if(indegree[i] == 0) { q.push(i); d[i] = 0}
+  while(!q.empty()){
+    num++;
+    int u = q.front(); q.pop();
+    for(each u->v){
+      indegree[v]--;
+      if(indegree[v] == 0) q.push(v);
+      
+      if(d[u] + w > d[v]) d[v] = d[u] + w;
+    }
+  }
+  return num == n;
+}
+```
+
+
+
+### 并查集
+
+```c++
+vector<int> father; // 存储元素父节点号，不一定指向集合的父节点
+
+void init(){ // 初始化father数组使其均指向自己
+  for(int i = 0; i < father.size(); ++i) father[i] = i;
+}
+
+int Root(int x){ // 返回集合的父节点，顺便堆优化
+  int a = x;
+  while(x != father[x]) x = father[x];
+  
+  while(father[a] != a){
+    int z = a;
+    a = father[a];
+    father[z] = x;
+  }
+  return x;
+}
+
+void Union(int a, int b){ // 把元素a，b所在的集合并起来
+  int Ra = Root(a), Rb = Root(b);
+  if(Ra != Rb) father[Ra] = Rb;
+}
+```
+
+
+
 ### Tarjan
+
+利用深度优先搜索回溯判断是否为强连通分量
+
+时间复杂度：O ( n+m )
 
 ```c++
 const int maxn;
 vector<int> adj[maxn];
+
 stack<int> st;
-int dfn[maxn], low[maxn];
-bool ins[maxn];
+int dfn[maxn], // dfs 时间戳
+low[maxn];		 // low 相同的节点为一个强连通分量
+bool ins[maxn];// 节点是否在栈内
 int index = 0;
 
 void tarjan(int u){
