--- a/3b1b线性代数.md
+++ b/3b1b线性代数.md
@@ -86,7 +86,7 @@ $$
 
 #### 行列式
 
-线性空间变换中 单位矩形 ${\mbox{变换后面积}} \over {\mbox{变换后面积}}$ （体积）
+线性空间变换中 单位矩形 ${\mbox{变换后面积}} \over {\mbox{变换前面积}}$ （体积）
 
 行列式为0，表示线性空间变换压缩空间
 
