--- a/离散数学.md
+++ b/离散数学.md
@@ -1,5 +1,31 @@
 # 离散数学
 
+## 命题逻辑
+
+命题：能判断真假的陈述句
+
+蕴含：p-->q 除p真q假为假以外全为真（命题）
+
+双条件语句：p<-->q 同真假时为真（命题）
+
+逻辑等价：p <=> q，p <--> q 为永真式（语句、部分赋值）
+
+推导：p => q，p-->q为真（语句、部分赋值）
+
+可满足性：存在一个对所有命题变元的真值赋值使复合命题为真
+
+析取范式：有限个简单合取式构成的析取式
+
+合取范式：有限个简单析取式构成的合取式
+
+主析取范式：析取范式中的所有简单合取式均是极小项（每个命题变元只出现一次）
+
+量词：描述范围
+
+谓词：描述属性P(x)
+
+前束范式：量词，命题
+
 ## 复杂度
 
 通常采用算法中基本运算的频度`f(n)`来分析，记所有语句的频度之和为`T(n)`
@@ -32,16 +58,20 @@ T(n) = θ( f(n) ) : n充分大时有 C~1~ * |f(n)| <= |T(n)| <= C~2~ * |f(n)|
 
 `np完全问题`：
 
-- npc问题中一个问题可用多项式时间求解，那么有p = np，即所有np问题均可用多项式时间求解（因为所有的完全多项式非确定性问题，都可以转换为一类叫做满足性问题的逻辑运算问题）
-- 若np问题中存在一个不是多项式时间可解，则有p不等于np，即所有npc问题均不可用多项式时间求解（np问题还是有可能用多项式时间求解）
+- npc问题中一个问题可用多项式时间求解，那么有p = np，即所有np问题均可用多项式时间求解
+- 若np问题中存在一个多项式时间不可解，则有p不等于np，即所有npc问题均不可用多项式时间求解（np问题还是有可能用多项式时间求解）
 
-> npc类问题是np问题中基本不可能找到多项式时间求解算法的问题
+> 所有的完全多项式非确定性问题，都可以转换为一类叫做满足性问题的逻辑运算问题
 
 - 可满足性问题/SAT问题
-- 有向哈密尔顿回路
-- 无向哈密尔顿回路
+- 有向/无向哈密尔顿回路
 - 图着色数
 - 0-1背包
+
+  > 有n件物品，每件物品有重量和价值。现有一个容量为W的背包，问如何选取物品放入背包，使得背包内物品的总价值最大
+  > 0-1背包的复杂度是O(nW)，n是物品数量，W是背包最大承载重量
+  > 这种和参数的取值而不是参数的规模成多项式关系的算法，叫做伪多项式时间算法
+  > O(nW)相对输入规模就是指数级的
 
 ---
 
@@ -67,8 +97,6 @@ T(n) = θ( f(n) ) : n充分大时有 C~1~ * |f(n)| <= |T(n)| <= C~2~ * |f(n)|
 ### 函数
 
 定义：从A到B的函数，对A的每个元素恰好指派B的一个元素
-
-函数有时也称为**映射**
 
 对于 A --> B 的函数 f：
 
@@ -108,7 +136,7 @@ T(n) = θ( f(n) ) : n充分大时有 C~1~ * |f(n)| <= |T(n)| <= C~2~ * |f(n)|
 
 ### 集合的基数
 
-**可数集**：有限集 或 与自然数集有相同基数的集合
+**可数集**：有限集 或 与自然数集有相同基数的无限集合
 
 > 若集合A的元素可以用全体自然数来标记：元1，元2，...，元n，...那么就说A 是可数专无限集（记为A～N）（即存在 A 到正整数集/自然数集的一个一一对应）
 >
@@ -188,6 +216,8 @@ R^-1^ = 所有关系反过来写（对应矩阵的转置）
 
 ###  闭包
 
+闭包：闭包是一个包含关系R的具有某性质的关系S，且S是所有这种关系的子集
+
 自反闭包 = R ∪ R^0^
 
 对称闭包 = R ∪ R^-1^
@@ -249,9 +279,9 @@ R是定义在A上的等价关系，
 
 最小元：该元素小于其他所有元素（哈塞图底尖）
 
-子集的上界：一个元素大于偏序集子集A中的所有元素
+子集的上界：一个元素大于等于偏序集子集A中的所有元素
 
-子集的下界：一个元素小于偏序集子集A中的所有元素
+子集的下界：一个元素小于等于偏序集子集A中的所有元素
 
 最小上界：小于其他所有上界的上界
 
@@ -271,7 +301,7 @@ R是定义在A上的等价关系，
 
 导出子图：减去一些顶点和一些边
 
-同构：G~1~ = <V~1~, E~1~>, G~2~ = <V~2~, E~2~>, 若存在双射函数 f : V~1~-->V~2~, 对于任意E~1~中e = (u,v)，有E~2~中的e' = (f(u), f(v))，且e与e'重数相同
+`同构`：G~1~ = <V~1~, E~1~>, G~2~ = <V~2~, E~2~>, 若存在双射函数 f : V~1~-->V~2~, 对于任意E~1~中e = (u,v)，有E~2~中的e' = (f(u), f(v))，且e与e'重数相同
 
 > 顶点数相同，边数相同，度序列相同和某些顶点的特征等均为必要条件，可以判断图非同构
 
@@ -304,13 +334,13 @@ R是定义在A上的等价关系，
 
 若V~1~中每个顶点与V~2~中每个顶点 **有 且仅有一条边相连** ，成为`完全二分图`，记为K~n,m~
 
-`匹配M`：边集的子集，没有两条边连接相同的顶点
+`匹配M`：边集的一个子集，该子集没有两条边连接相同的顶点
 
 `最大匹配`：包含边数最多的匹配
 
 `完全匹配`：设图的一个匹配M，其划分为( V~1~, V~2~ )，若|V~1~| = |M|（匹配的边数），则称M为V~1~到V~2~的完全匹配
 
-`霍尔定理（充要）`：设二分图<V~1~, V~2~, G>，|V~1~| <= |V~2~|，存在V~1~到V~2~的完全匹配 <=> V~1~中k个顶点至少邻接V~2~中k个顶点
+`霍尔定理（充要）`：设二分图<V~1~, V~2~, G>，|V~1~| <= |V~2~|，存在V~1~到V~2~的完全匹配 <=> V~1~中任意k个顶点至少邻接V~2~中k个顶点
 
 ```c++
 求最大匹配：匈牙利算法
@@ -393,11 +423,11 @@ R是定义在A上的等价关系，
 
 可分配的（分配律）：x * (y @ z) = (x * y) @ z
 
-幺元：e * x = x 且 x * e = x，则称e为运算*的幺元
+`幺元`：e * x = x 且 x * e = x，则称e为运算*的幺元
 
-零元：O * x = O 且 x * O = O，则称O为运算*的零元
+`零元`：O * x = O 且 x * O = O，则称O为运算*的零元
 
-逆元：若存在 y * x = e 且 x * y = e，则称y为 x关于运算*的逆元
+`逆元`：若存在 y * x = e 且 x * y = e，则称y为 x关于运算*的逆元
 
 > 对于集合S和二元运算，若幺元或零元存在，则唯一
 >
@@ -405,7 +435,9 @@ R是定义在A上的等价关系，
 
 代数系统：集合S和S上的k个运算组成代数系统 <S, f~1~, f~2~, ...>
 
-群：设代数系统<G, *> ，\*为二元运算，若\*是可结合的、存在幺元e、任意元素均有逆元，则称G为群
+`半群`：运算是*可结合的，称代数系统<S, *>为半群
+
+`群`：设代数系统<G, *> ，\*为二元运算，若\*是可结合的、存在幺元e、任意元素均有逆元，则称G为群
 
 
 
@@ -413,7 +445,9 @@ R是定义在A上的等价关系，
 
 ## 朴素贝叶斯
 
-已知 P(第一步)（先验概率），P(第二步｜第一步)，
+求解“逆概率”问题，在有限的已知条件下估计概率
+
+已知 P(第一步)（先验概率），P(第二步)，P(第二步｜第一步)，
 
 求 第二步发生的条件下，第一步发生的概率 P(第一步｜第二步)
 
@@ -421,8 +455,12 @@ R是定义在A上的等价关系，
 
 求条件 A~i~ 下类别为 C~j~的概率
 $$
-P\left(C_{j} | A_{1} A_{2} A_{3}\right)=\frac{P\left(A_{1} A_{2} A_{3} | C_{j}\right) P\left(C_{j}\right)}{P\left(A_{1} A_{2} A_{3}\right)}
+P\left(C_{j} | A_{1} A_{2} A_{3}\right)=P\left(C_{j}\right)\frac{P\left(A_{1} A_{2} A_{3} | C_{j}\right) }{P\left(A_{1} A_{2} A_{3}\right)}
 $$
+$P(C_j|A_1A_2A_3)-后验概率\\P(C_j)-先验概率\\\frac{P\left(A_{1} A_{2} A_{3} | C_{j}\right) }{P\left(A_{1} A_{2} A_{3}\right)}-可能性函数,求P(A_1,A_2,A_3)可用全概率公式$  
+
+**先估计一个值（先验概率），然后根据观察的新信息不断修正(可能性函数)。**
+
 例：已知 P(邮件包含关键字x｜垃圾邮件)，P(邮件包含关键字x｜非垃圾邮件)，
 估计P(垃圾邮件) = 1/2，P(非垃圾邮件) = 1/2，
 可得 P(垃圾邮件｜包含关键字x)
@@ -440,7 +478,25 @@ $$
 
 已知P(身高，体重｜男/女)
 
+---
 
+## 傅里叶
+
+#### 傅里叶变换
+
+`时域信号`：对时间变化的函数
+
+`频域信号`：离散频率值的集合
+
+傅里叶变换把任意时域信号变换为频域信号，逆傅里叶变换可以变回来
+
+傅里叶变换把函数分解为多个三角函数的叠加，三角函数的关键值是相位和频率，若不考虑相位，频率可以唯一确定一个三角函数，则实际上是把函数映射为频率的集合
+
+#### 傅里叶变换和傅里叶级数
+
+傅里叶级数：把周期函数分解为三角函数的叠加
+
+傅里叶变换：把任意函数分解为三角函数的叠加
 
 ---
 
