--- a/算法/图论算法.md
+++ b/算法/图论算法.md
@@ -80,7 +80,7 @@ void Prim()
     int u = f.u;
     vis[u] = true;
     w += d[u];
-    for(auto p : adh[u]){
+    for(auto p : adj[u]){
       int v = p.first; int u2v = p.second;
       if(!vis[v] && u2v < d[v])
         d[v] = dist;
@@ -95,7 +95,7 @@ void Prim()
 
 原理：根据切分定理，每次找到的边必然在最小生成树中
 
-排序所有顶点，维护一个已经找到的部分最小生成树顶点集合S，每次找不在S中的最小边e，加入最小生成树
+排序所有顶点，开始所有顶点独立成树，每次找连接两棵树的最小边，加入生成树（根据切分定理这条边一定在最小生成树中且该边加入后不会产生回路）
 
 时间复杂度：`elogv`
 
@@ -203,7 +203,7 @@ void dijkstra(int s){
 
 ### Bellman_Ford
 
-> 负权图适用
+> 可判断是否有负环
 
 最短路收敛性质：若u-->v 在最短路中并且d[u]已经填完毕，则对(u,v)松弛以后d[v]填完毕
 
@@ -234,6 +234,8 @@ bool BellmanFord(int s){// 返回是否存在负环
 > shortest-path-faster-algorithm，由bellman-ford优化而来
 
 *只有某个顶点`u`的`d[u]`被改变时，他的相邻点`v`的`d[v]`才有可能改变*
+
+判断负环：记录每个点的入队次数，入队次数大于等于 n 就说明有负环
 
 复杂度：`ke`，很多情况下k不超过2
 
@@ -317,6 +319,8 @@ void floyd(){
 ### Toplogical
 
 > 返回是否是有向无环图
+
+复杂度：O(n)​
 
 ```c++
 vector<int> indegree;
