--- a/算法/小算法.md
+++ b/算法/小算法.md
@@ -46,6 +46,12 @@ for(int i = 0, j = 0; j < s.size(); ++j, i = j) // 跳过 ','
 }
 ```
 
+#### 求和问题
+
+求和问题可用`部分和数组`加速
+
+[1074. 元素和为目标值的子矩阵数量](https://leetcode-cn.com/problems/number-of-submatrices-that-sum-to-target/) 
+
 #### 映射输入
 
 用于图或树题，所给节点不是标准 0~n-1 或 1~n，进行映射操作，所有数据结构存储映射以后的index，只有在输出时进行转换
@@ -68,5 +74,12 @@ for(auto &x : vec)
 
 输出：
 for(auto x : ans) cout << to_input[x];
+```
+
+#### ++算法
+
+```c++
+while(A[j] == 1) ++j;  // 把j指向第一个不是1的位置
+while(A[j++] == 1);	   // 把j指向第一个不是1的下一位
 ```
 
