--- a/算法/树.md
+++ b/算法/树.md
@@ -289,17 +289,27 @@ void Tarjan(int u){
 
 m阶B树：
 
-- 除根节点外每个节点至少有`向上取整(m/2)`棵子树，若根节点不是终端阶段，至少有两个子树
-
+- 除根节点外每个节点至少有`向上取整(m/2)`棵子树，若根节点不是终端节点，至少有两个子树
 - 每个节点最多有m个子树，m-1个关键字
-- 所有叶节点在同一层
+- 所有叶节点在同一层，叶节点不带信息
+- 节点中数据按节点、子树从左到右顺序排列
 
-> 这里的叶节点是不带信息的挂载节点，终端节点是传统意义上的叶节点
+> B树多用在内存里放不下，大部分数据存储在外存上时。因为B树层数少，因此可以确保每次操作，读取磁盘的次数尽可能的少。
 
 ### B+树
 
-B+树叶节点包含全部键信息，非叶节点只起索引作用，会与叶节点中键重复
+- 除根节点外每个节点至少有`向上取整(m/2)`棵子树，若根节点不是终端节点，至少有两个子树
+- 每个节点最多有m个子树，m-1个关键字
+- 叶节点包含全部关键字和值，并按大小排列
+- 所有非叶节点只包含各个子节点中最大关键字和指向子节点的指针
 
 即为层层hash结构，一般包含一个指向根节点的指针和指向最小值的指针，可实现从根节点查找和从最小值开始遍历
 
-**B/B+树广泛应用于操作系统的文件索引和数据库索引**
+**B/B+树广泛应用于数据库索引**
+
+> #### 为什么说B+tree比B树更适合实际应用数据库索引？
+>
+> - B+tree的磁盘读写代价更低
+>   B+树非也节点只存键和指针，一个盘可容纳更多节点、而B树要存键值和指针
+> - B+树查询效率更加稳定
+> - B+树只要遍历叶子节点就可以实现整棵树的遍历、B树不支持这样的操作
