--- a/java/编程思想.md
+++ b/java/编程思想.md
@@ -112,3 +112,59 @@ public class PythonCourseFactory implements CourseFactory { // 工厂实现
 
 每个工厂生产多种对象，有多个工厂
 
+
+
+### 代理模式
+
+```java
+// 服务
+public interface Service {
+  void do();
+}
+public class MyService implements Service { // 需要被代理的服务
+  public void do() { ... }
+}
+```
+
+
+
+#### 静态代理
+
+#### 动态代理
+
+动态代理可代理不同的类(这些类实现了不同的接口，要求相似的代理功能：前后处理相同)
+
+```java
+// Proxy.newProxyInstance
+static Object newProxyInstance(ClassLoader loader, Class<?>[] interfaces, InvocationHandler h)
+```
+
+
+
+```java
+// 代理服务
+public class ProxyHandler implements InvocationHandler {
+  private Object service;
+  public ProxyHandler(Object service) {
+    this.service = service;
+  }
+  
+  @Override
+  public Object invoke(Object proxy, Method mothod, Object[] args) throws Throwable {
+    // 前处理
+    method.invoke(object, args); // 调用服务
+    // 后处理
+    return null;
+  }
+}
+```
+
+```java
+// 调用
+Service myService = new MyService();
+InvocationHandler handler = new ProxyHandler(myService);
+Service proxyService = (Service) Proxy.newProxyInstance(myService.getClass().getClassLoader(), myService.getClass().getInterfaces(), handler);
+
+proxyService.do();
+```
+
