--- a/算法/图论.md
+++ b/算法/图论.md
@@ -11,10 +11,11 @@ vector<unordered_map<int, int> > adj; // 带权临接表  i->(v, w)
 ### DFS
 
 ```c++
+bool vis[maxn];
 dfs(u){
 	vis[u] = true;
 	for(each u->v){
-		if(!vis[v]) dfs(v)
+		if(!vis[v]) dfs(v);
 	}
 }
 ```
@@ -22,11 +23,11 @@ dfs(u){
 ### BFS
 
 ```c++
-vector<bool> inq(n, 0);
+vector<bool> inq(n, 0); // inq数组防止回头访问，若用vis则有重复访问的可能
 void bfs(u){
   queue q;
   q.push(u); inq[u] = true;
-  int cnt = 1, depth = 0;
+  int cnt = 1, depth = 0; // 可以记录深度及每一层节点数量
   while(!q.empty()){
     int f = q.front(); q.pop();
     cnt--;
@@ -45,9 +46,9 @@ void bfs(u){
 
 ## 最小生成树
 
->  权值最小的生成树
+>  权值最小的生成树（每个节点都可以是根节点，可能存在多个）
 
-切分定理：给定任意切分，边权最小者必然属于最小生成树
+切分定理：给定任意切分(切割掉一部分边，把图分成两个子图)，边权最小者必然属于最小生成树
 
 > 证明：假设e为给定切分权重最小边，T为最小生成树，假设e不在T中，必有一切分中的、比e大的边f在T中（若不存在则有两个连通分量），把f删掉e加入就得到一个更小的生成树 T' ，矛盾
 
@@ -65,15 +66,15 @@ struct HeapNode{// (id, d)
     int u, d;
     bool operator < (const HeapNode &v) const { return d > v.d; }
 }
-vector<int> d;
-vector<bool> vis;
 vector<unordered_map<int, int>> adj;
 
 void Prim()
 {
+  vector<int> d(n, INF); // 维护部分解补集到部分解的距离
+  vector<bool> vis(n, false); // 标记部分解，防止把部分解加入队列
   d[0] = 0;
   int w = 0; // 权值之和
-  priority_queue<HeapNode> q;
+  priority_queue<HeapNode> q; // 存储从部分解出发可以直接到的补集中的节点
   q.push(HeapNode(0, 0));
   while(!q.empty()){
     HeapNode f = q.front(); q.pop();
@@ -82,8 +83,10 @@ void Prim()
     w += d[u];
     for(auto p : adj[u]){
       int v = p.first; int u2v = p.second;
-      if(!vis[v] && u2v < d[v])
-        d[v] = dist;
+      if(!vis[v] && u2v < d[v]) {
+         d[v] = dist;
+      	 q.push(HeapNode(v, d[v]));
+      }
     }
   }
 }
@@ -166,36 +169,83 @@ u之所以一定为最短路节点：
 复杂度：`elogv`（普通`v2`）
 
 ```c++
-struct HeapNode{
+struct HeapNode{ // 存距起点的距离，在优先队列中使用
     HeapNode(int _u, int _d) : u(_u), d(_d){ }
     int u, d;
     bool operator < (const HeapNode &v) const { return d > v.d; }
 }
-struct Edge{
-    int to, len;
+vector<unordered_map<int, int>> adj; // u->[(v,w)]
+void dijkstra(int s) {
+  vector<int> d(n, INF);
+  vector<bool> vis(n, false); // vis数组用来找是否有负权边
+  prioroty_queue<HeapNode> q; // 大根堆，每次队首一定是最优解
+  d[s] = 0;
+  q.push(HeapNode(s, 0));
+  while(!q.empty()) {
+    heapNode f = q.front(); q.pop();
+    int u = f.u;
+    if(vis[u]) continue; // 有负权边
+    vis[u] = true;
+    for(pair p : adj[u]) {
+      int v = p.first, w = p.second;
+      if(d[u]+w<d[v]) {
+        d[v] = d[u] + w;
+        q.push(HeapNode(v, d[v])); // 节点可能重复入队但不影响
+      }
+    }
+  }
+}
+```
+
+```c++
+// dijkstra + dfs寻找多条最短路径中符合的那一条
+struct HeapNode{ 
+    HeapNode(int _u, int _d) : u(_u), d(_d){ }
+    int u, d;
+    bool operator < (const HeapNode &v) const { return d > v.d; }
+}
+vector<unordered_map<int, int>> adj; // u->[(v,w)]
+
+vector<vector<int> pre;
+
+void dijkstra(int s) {
+  pre.resize(n);
+  vector<int> d(n, INF);
+  vector<bool> vis(n, false);
+  prioroty_queue<HeapNode> q; // 大根堆，每次队首一定是最优解
+  d[s] = 0;
+  q.push(HeapNode(s, 0));
+  while(!q.empty()) {
+    heapNode f = q.front(); q.pop();
+    int u = f.u;
+    if(vis[u]) continue;
+    vis[u] = true;
+    for(pair p : adj[u]) {
+      int v = p.first, w = p.second;
+      if(d[u]+w<d[v]) {
+        d[v] = d[u] + w;
+        q.push(HeapNode(v, d[v]));
+        pre[v].clear();
+        pre[v].push_back(u);
+      }
+      else if(d[u]+w==d[v]) {
+        pre[v].push_back(u);
+      }
+    }
+  }
 }
 
-vector<Edge> adj[maxn];
-int d[maxn];
-bool vis[maxn];
-priority_queue<HeapNode> q; // 优先队列对已开放顶点（已优化）进行排序，每次队首一定是最优解
-
-void dijkstra(int s){
-    fill(d, d+maxn, 1e9);
-    d[s] = 0;
-    q.push(HeapNode(s, 0));
-    while(!q.empty()){
-        HeapNode f = q.top(); q.pop();
-        int u = f.u;
-        vis[u] = true;
-        for(itn i = 0; i < adj[u].size(); i++){
-            Edge e = adj[u][i];
-            if(!vis[e.to] && d[e.to] > d[u] + e.len){
-                d[e.to] = d[u] + e.len;
-                q.push(HeapNode(e.to, d[e.to]));
-            }
-        }
-    }
+vector<int> tempPath, path;
+void dfs(int u) {
+  if(u == ed) {
+    tempPath.push_back(u);
+    if(tempPath符合要求) path=tempPath;
+    tempPath.pop_back();
+    return;
+  }
+  tempPath.push_back(u);
+  for(auto p : pre[u]) { dfs(p.first); }
+  tempPath.pop_back();
 }
 ```
 
@@ -209,7 +259,7 @@ void dijkstra(int s){
 
 原理：根据收敛性质，因为d[s]已经确定，v-1次遍历中每次至少有一个最短路路径被加入，v-1次以后一定全部被加入
 
-复杂度：`ve`
+复杂度：`e·v`
 
 伪代码
 
@@ -317,6 +367,8 @@ void floyd(){
 ## 其他
 
 ### Toplogical
+
+每次删除入度为0的节点，如果可以全部删除则生成拓扑排序 
 
 > 返回是否是有向无环图
 
