--- a/算法/杂.md
+++ b/算法/杂.md
@@ -1,6 +1,14 @@
 # 小算法
 
-### 素数
+#### 余数
+
+`A/B = C*B + R`，C为商，R为余数
+
+A为负数：变为正数
+
+Eg. `-5%2 = -3%2 = -1%2 = 1%2 = 1`
+
+#### 素数
 
 从2到根号x查询是否可以整除x，都不能则是素数
 
@@ -14,7 +22,7 @@ bool isPrime(int x){
 }
 ```
 
-### 辗转相除法求最大公约数
+#### 辗转相除法求最大公约数
 
 定理：gcb(a,b) = gcb(a,ka+b),其中a、b、k都为自然数.………………
 
@@ -26,7 +34,7 @@ int gcb(int a, int b){
 }
 ```
 
-### 向上取整
+#### 向上取整
 
 L/m向上取整
 
@@ -34,7 +42,9 @@ L/m向上取整
 int res = (L-1)/m + 1;
 ```
 
-### 分割子串
+#### 分割子串
+
+由字符串分割的子串
 
 ```c++
 // 寻找由','分割的字符串
@@ -45,6 +55,49 @@ for(int i = 0, j = 0; j < s.size(); ++j, i = j) // 跳过 ','
   // ...
 }
 ```
+
+由长度划分的子串
+
+```c++
+int len = (L-1)/m + 1; // 向上取整
+for(int i = 0; i < len; i++){
+	start = i*m;
+	end = min((i+1)*m, L); // 每段的开始和结束
+}
+```
+
+#### 循环移位
+
+长度为n的串：
+
+`正向走` ：next  = (now+1)%n  |  (now + n) %n +1
+
+`负向走`：next = (now + n - 2) % n +1 (负向走两步，正向回一步)
+
+`统一`：next = (now + d + n - 1) % n + 1 (d为方向，正向为1，负向为-1) 
+
+#### 进制转换
+
+```c++
+十进制转二进制
+int x; string s;
+do{
+	int tmp = x%2;
+	x /= 2;
+	s.push_back(tmp+'0');
+}while(x != 0)
+s:[0, hi) 低位->高位
+
+二进制转十进制
+string s; int x = 0;
+for(int i = 0; i < s.size(); i++){
+	x += (s[i] - '0')*pow(2, i);
+}
+```
+
+
+
+
 
 #### 求和问题
 
