--- a/算法/树.md
+++ b/算法/树.md
@@ -205,23 +205,31 @@ NodePtr LCA(NodePtr u, NodePtr v)
 
 #### tarjan算法
 
-回溯法自底向上地标记当前LCA，并计算LCA
+回溯法自底向上地标记当前LCA，并计算LCA，是一种离线算法，一次性算出所有LCA。
+
+dfs遍历整个树，当遍历到某个节点时：
+
+1. 将当前结点标记为已经访问
+2. 递归遍历所有它的子节点(称之为 y)，并在递归执行完后用并查集合并 x 和 y
+3. 遍历包含本节点的查询(u,v)，若另一个节点已经访问过，则这对查询的LCA是`Root(v)`
+
+找到LCA时树的状态：
+
+![LCA](/Users/guosongnan/Desktop/working/notes/pic/LCA.png)
 
 复杂度：O(n+q)
 
 ```c++
-Tarjan(u)//marge和find为并查集合并函数和查找函数
+Tarjan(u)// marge和find为并查集合并函数和查找函数
 {
-     for each(u,v)    //访问所有u子节点v
-     {
+  标记u被访问过;
+     for each(v:u.child){ //访问所有u子节点v
          Tarjan(v);     //继续往下遍历
          marge(u,v);    //合并v到u上
-         标记v被访问过;
      }
-     for each(u,e)    //访问所有和u有询问关系的e
-     {
-         如果e被访问过;
-         u,e的最近公共祖先为find(e);
+     for each(v:q[u]){ //访问所有和u有询问关系的v
+         如果v被访问过;
+         u,v的最近公共祖先为find(v);
      }
  }
 ```
@@ -229,15 +237,16 @@ Tarjan(u)//marge和find为并查集合并函数和查找函数
 ```c++
 vector<int> father; // 并查集
 int findRoot(int x);
-void Union(int u, int v);
+void Union(int u, int v); // 注意此处谁作为并查集根会有影响，此处应该u为根
 
 vector<bool> vis; 						// 是否已经找到待选LCA
 vector<unordered_set<int>> q; // 待查询对(u,v)，注：(u,v),(v,u)均要记录
 void Tarjan(int u){
+  vis[u] = true;
   for(int v : u->children){
     Tarjan(v);
     Union(u, v);
-    vis[v] = true;
+    // vis[v] = true;
   }
   for(int e : q[u]){
     if(vis[e]) printf("%d, %d的LCA为%d\n", u, e, findRoot(e));
