--- a/算法/线性结构上的算法.md
+++ b/算法/线性结构上的算法.md
@@ -131,7 +131,21 @@ partition(list):
 
 #### 二次探测
 
-按 `1^2, 2^2, ...`探测
+按 `（hashkey + i*i）% len`探测
+
+存在插入失败的情况：
+
+若枚举增量直至`i == hashtable.size`仍无法插入则插入失败，
+
+因为往后的插入和第一轮插入相同
+
+```
+   (key + (size+i)^2)%size
+ = key%size + i^2 % size
+ = (key + i^2) % size
+```
+
+查找时也是按探测顺序查找
 
 ## 字符串
 
