--- a/java/编程思想.md
+++ b/java/编程思想.md
@@ -2,7 +2,7 @@
 
 ## 类之间的关系
 
-#### 依赖关系(Dependency)
+#### 依赖关系(Dependency, uses-a)
 
 类A使用类B，但这种使用关系是脆弱的、临时的，类B的变化会影响类A，称A依赖于B
 
@@ -30,7 +30,7 @@
 
 表示：实心棱形头实线(箭头)
 
-#### 继承关系(泛化、Generalization)
+#### 继承关系(泛化、Generalization, is-a)
 
 子类继承父类的非private属性、方法，并可以覆盖或扩展属性、方法
 
