--- a/计算机理论/3b1b线性代数.md
+++ b/计算机理论/3b1b线性代数.md
@@ -50,6 +50,16 @@ $ 为基底的向量在直角系中的坐标**
 而 $\overrightarrow{\mathrm{v}}$ 在直角系中的坐标为 $\left[\begin{array}{l}x' \\ y'\end{array}\right]
 \ = \left[\begin{array}{ll}a & b \\ c & d\end{array}\right]\left[\begin{array}{l}x \\ y\end{array}\right]=x\left[\begin{array}{l}a \\ c\end{array}\right]+y\left[\begin{array}{l}b \\ d\end{array}\right]$ 
 
+理解1:
+
+矩阵$C$为一个线性变换，该线性变换把$\overrightarrow{\mathrm{i}},\overrightarrow{\mathrm{j}}$张成的空间变换为列向量张成的空间。$C$作用于向量$\overrightarrow{\mathrm{v}}$使其变换为$\overrightarrow{\mathrm{u}}$。
+
+理解2:
+
+$\overrightarrow{\mathrm{v}}$的坐标代表一个向量$\overrightarrow{\mathrm{x}}$在矩阵$C$列向量张成的空间中的坐标，通过乘法运算算出该向量$\overrightarrow{\mathrm{x}}$在直角坐标系下的坐标
+
+
+
 **变换矩阵不满秩**
 
 空间会被压缩，因为变换后的基向量线性相关
@@ -119,7 +129,7 @@ $$
 
 > 特征值为0时特征向量被压缩到 0 （存在维度压缩）
 > 特征值为虚数时存在旋转
-> 特征值重根时可能是多个特征值对应一个特征向量，如剪切矩阵
+> 特征值重根时可能是多个相同特征值对应一个特征向量，如剪切矩阵
 > 或者多个特征向量的特征值正好相等，如等比缩放矩阵
 
 **对角化**：
@@ -127,3 +137,4 @@ $$
 若基向量是矩阵的特征向量，则矩阵为对角阵（变换只伸缩基向量）
 
 矩阵可对角化，矩阵作用于一个向量可变为先把该向量左乘特征向量矩阵P做坐标变换，再左乘对角阵做线性变换，再乘P^-1^做回坐标变换
+
